# POI-planner

./: README.md
sfc/: README.md
sfc/sfc_env/: CMakeLists.txt  package.xml  readMe.md
sfc/sfc_env/include/: InESDFMap.hpp  KDMap.h  POIContainer.h  PointsMap copy.h  PointsMap.h  SFCEnv.h  SOGMMap.hpp  nanoflann.hpp
sfc/sfc_env/src/: InESDFMap.cpp  KDMap.cpp  POIContainer.cpp  PointsMap copy.cpp  PointsMap.cpp  SFCEnv.cpp  SOGMMap.cpp
sfc/sfc_manager/: CMakeLists.txt  package.xml
sfc/sfc_manager/config/: gz.yaml  lidar.yaml  seu.yaml  yf.yaml
sfc/sfc_manager/include/: MissionXYZ.h  SFCPlanner.h  SFCPlannerLidar.h
sfc/sfc_manager/launch/: cameraonboard.launch  gzonboard.launch  lidaronboard.launch  px4_mavros.launch  record.sh  remotevis.launch  rs_depth.launch  sfc.rviz
sfc/sfc_manager/msg/: WayPoints.msg
sfc/sfc_manager/src/: MissionXYZ.cpp  MissionXYZ_node.cpp  SFCPlanner.cpp  SFCPlannerLidar.cpp  SFCPlannerLidar_node.cpp  SFCPlanner_node.cpp  ep2fcu_node.cpp  path_vis_node.cpp
sfc/sfc_planner/: CMakeLists.txt  package.xml
sfc/sfc_planner/config/: 2d.yaml  map.ply  plan_map.yaml  pois.yaml  rviz.rviz  search.yaml
sfc/sfc_planner/include/: AstarSearch.h  HybirdAstar.h  HybirdAstar_精简.h  JumpPointSearch.h  PathNlopt.h  SFCNlopt.h  UniformBspline.h
sfc/sfc_planner/src/: AstarSearch.cpp  HybirdAstar.cpp  HybirdAstar_精简.cpp  JumpPointSearch.cpp  PathNlopt.cpp  SFCNlopt copy.cpp  SFCNlopt.cpp  UniformBspline.cpp
sfc/sfc_planner/test/: test_2d.cpp  test_map_accurancy.cpp  test_poi.cpp  test_search.cpp  test_sfc.cpp
